@@ -19,15 +19,16 @@ MD5 ec46023383523d7f31cfcce8f74d0b1a files/texmf-update 2324
 RMD160 2f3c2962f36cbc666ca2ddbfb17ec54902557252 files/texmf-update 2324
 SHA256 a0ac075390aa4c02c2baa0ebdb2cea11c1eff702cf05ce7d0518906db9ce319d files/texmf-update 2324
 DIST texlive-basicbin-2007.tar.bz2 9408579 RMD160 91b915d66116377afb45d6b5b40d391630e4c54c SHA1 6165ffe6ac65071aabefa07df760ac5c2481a9be SHA256 2c41a7962f97f8f9a89bbb5954618a9369bdbf4c2e5dbf43ecb5d9c599c884eb
+DIST texlive-binextra-2007.tar.bz2 548692 RMD160 aeda2d9bdfa78972080b73a0fb6cf4a5e88fda0a SHA1 6fde96513efd160ff2ab7541ffe01678f1abe21f SHA256 d47847b6eeb8e639b81296a882e3a0796274fdfa025e03fc595b2e9b2ff7aa83
 DIST texlive-source-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
-EBUILD texlive-source-2007.ebuild 6770 RMD160 5c8a999145b3a59d6166284da782c99788560ae4 SHA1 ea1f85ff7e55ae39fdb4199d6ccda2a75477ad6b SHA256 52650861316b1b8aeefe2228a2982f05b3a749f9c77a39ea324ac7bbb85c87a7
-MD5 646e12c2401be341ade4bd7515da0839 texlive-source-2007.ebuild 6770
-RMD160 5c8a999145b3a59d6166284da782c99788560ae4 texlive-source-2007.ebuild 6770
-SHA256 52650861316b1b8aeefe2228a2982f05b3a749f9c77a39ea324ac7bbb85c87a7 texlive-source-2007.ebuild 6770
+EBUILD texlive-source-2007.ebuild 6619 RMD160 74a53099a409f5bc7e3d707b16bc31cfba7cffb5 SHA1 0f671955b36f829a8d03a9b72ae1e549726d2faa SHA256 805fab4189bd61a7cdb0f3d6ae96b7d1a279cd33a087a424d15cf77b1b5c3bc8
+MD5 be19ee8fd7a9fc7b6bd1fbe1402a4f6c texlive-source-2007.ebuild 6619
+RMD160 74a53099a409f5bc7e3d707b16bc31cfba7cffb5 texlive-source-2007.ebuild 6619
+SHA256 805fab4189bd61a7cdb0f3d6ae96b7d1a279cd33a087a424d15cf77b1b5c3bc8 texlive-source-2007.ebuild 6619
 MISC ChangeLog 333 RMD160 f646cb02f62fb336781225cafccff99b8538e968 SHA1 4a7e16acc8b01bee516a376def4f162156cdbbfe SHA256 96e1f5985e84b7b73bd09614b95ebe5a4e9ef514ceec1049c243a14781a8dd6f
 MD5 eb843e4ef5304114d7f048aa86eff0c5 ChangeLog 333
 RMD160 f646cb02f62fb336781225cafccff99b8538e968 ChangeLog 333
 SHA256 96e1f5985e84b7b73bd09614b95ebe5a4e9ef514ceec1049c243a14781a8dd6f ChangeLog 333
-MD5 28c5421255da98c3b8e34f8de58b2fcb files/digest-texlive-source-2007 539
-RMD160 cfe8061f8e84d132c373b437c63c6f1c03cea288 files/digest-texlive-source-2007 539
-SHA256 23c80ecc0702071d213df2d067493b4909bb6831128bc7bdff98313efb2c3178 files/digest-texlive-source-2007 539
+MD5 5b23f95b6b4797464a0d70b25a35663b files/digest-texlive-source-2007 807
+RMD160 0f7d09a715fe576266343fbe1557e9d23b760d6b files/digest-texlive-source-2007 807
+SHA256 adc1461bc0cd2a68a5d36926887374a5006e2c6365f1fc1b5ba513da91191313 files/digest-texlive-source-2007 807
